Add nested attributes for date of work, pub. Fix #23
Add timespan model as nested attributes on generic_file.
Add controller logic for nested date fields
Date fields each get their own model
Add form elements for date fields
Fix styling for date fields
Add a couple of controller tests
Add javascript for adding / removing time span fields
Add views for nested TimeSpan objects. (broken)
Misc. small test fixes
Add failing spec that demonstrates problem with solr retrieval
Tidy up controller spec (use 'let' to get rid of @vars)
Add (totally copied) spec for solr_instance_loader
Move json loading test from controller to integration
Change model associations to fix timespan solr retrieval
Remove debug line from views
Add date qualifier for 'century'. Specify decade / century in display
Add credit / license info for timespan class

--- a/app/assets/stylesheets/chf-overrides.css.scss
+++ b/app/assets/stylesheets/chf-overrides.css.scss
@@ -1,3 +1,4 @@
+// overrides for maker field
 .listing {
   .double-input {
     select {
@@ -5,6 +6,12 @@
     }
     input {
       width: 60%;
+    }
+  }
+  .row {
+    margin: 0;
+    .col-md-2, .col-md-3, .col-md-4, .col-md-7 {
+      padding: 0;
     }
   }
 }
