Get rid of 'remove' check box from date form element, fixes #46

--- a/app/views/records/edit_fields/_date_of_work.html.erb
+++ b/app/views/records/edit_fields/_date_of_work.html.erb
@@ -1,3 +1,3 @@
 <div class="date-editor">
-  <%= f.input key, as: :time_span, wrapper_html: {class: 'time-span form-group'}, input_html: { class: 'form-control', data: {name: 'date_of_work'}}, required: f.object.required?(key) %>
+  <%= f.input key, as: :time_span, wrapper_html: {class: 'nested-field form-group'}, input_html: { class: 'form-control', data: {name: 'date_of_work'}}, required: f.object.required?(key) %>
 </div>
