Add metadata tooltips. Make sure each field has help link. Fixes #34.

--- a/app/views/records/edit_fields/_file_creator.html.erb
+++ b/app/views/records/edit_fields/_file_creator.html.erb
@@ -1,1 +1,1 @@
-<%= f.input :file_creator, collection: Sufia.config.file_creators %>
+<%= f.input :file_creator, as: :select_with_help, collection: Sufia.config.file_creators %>
