--- a/app/assets/stylesheets/chf-overrides.css.scss
+++ b/app/assets/stylesheets/chf-overrides.css.scss
@@ -16,7 +16,7 @@
   }
   .row {
     margin: 0;
-    .col-md-5, .col-md-3, .col-md-4, .col-md-9 {
+    .col-md-5, .col-md-3, .col-md-4, .col-md-6, .col-md-7, .col-md-9 {
       padding: 0;
       label {
         padding-left: 15px;
