--- a/app/views/collections/_show_document_list_row.html.erb
+++ b/app/views/collections/_show_document_list_row.html.erb
@@ -17,7 +17,7 @@
       <div class="media-body">
         <h4 class="media-heading">
           <%= link_to document.title_or_label, sufia.generic_file_path(document), id: "src_copy_link#{id}", class: "#{'document-title' if document.title_or_label == document.label}" %>
-          <a href="#" class="small" title="Click for more details"><i id="expand_<%= id %>" class="glyphicon glyphicon-chevron-right"></i></a>
+          <%# CHF: remove 'click for more details' / expanded-details row %>
         </h4>
         <%= render_collection_list(gf) %>
       </div>
@@ -37,27 +37,5 @@
   </td>
   <td class="text-center">
     <%= render partial: 'show_document_list_menu', locals: { id: id, gf: gf } %>
-  </td>
-</tr>
-<tr id="detail_<%= id %>"> <!--  document detail"> -->
-  <td colspan="6">
-    <dl class="expanded-details row">
-      <dt class="col-xs-3 col-lg-2">File Name:</dt>
-      <dd class="col-xs-9 col-lg-4"><%= link_to document.label, sufia.generic_file_path(document) %></dd>
-      <dt class="col-xs-3 col-lg-2">File Format:</dt>
-      <dd class="col-xs-9 col-lg-4"><%= document.file_format %>JPG</dd>
-      <dt class="col-xs-3 col-lg-2">Creator:</dt>
-      <dd class="col-xs-9 col-lg-4"><%= document.creator %></dd>
-      <dt class="col-xs-3 col-lg-2">Depositor:</dt>
-      <dd class="col-xs-9 col-lg-4"><%= link_to_profile document.depositor %></dd>
-      <dt class="col-xs-3 col-lg-2">Edit Access:</dt>
-      <dd class="col-xs-9 col-lg-10">
-        <% if document.edit_groups.present? %>
-          Groups: <%= document.edit_groups.join(', ') %>
-          <br/>
-        <% end %>
-        Users: <%= document.edit_people.join(', ') %>
-      </dd>
-    </dl>
   </td>
 </tr>
