--- a/app/views/my/_index_partials/_list_collections.html.erb
+++ b/app/views/my/_index_partials/_list_collections.html.erb
@@ -13,10 +13,7 @@
               <span class="sr-only"><%= t("sufia.dashboard.my.sr.show_label") %> </span>
               <%= document.title_or_label %>
           <% end %>
-          <a href="#" class="small" title="Click for more details">
-            <i id="expand_<%= id %>" class="glyphicon glyphicon-chevron-right" aria-hidden="true"></i>
-            <span class="sr-only"> <%= "#{t("sufia.dashboard.my.sr.detail_label")} #{document.title_or_label}" %></span>
-          </a>
+          <%# CHF: remove 'click for more details' / expanded-details row %>
         </div>
       </div>
     </div>
@@ -35,20 +32,4 @@
   <td class="text-center">
     <%= render partial:'collection_action_menu', locals: { id: id } %>
    </td>
-</tr>
-<tr id="detail_<%= id %>"> <!--  collection detail"> -->
-  <td colspan="6">
-    <dl class="expanded-details row">
-      <dt class="col-xs-3 col-lg-2">Description:</dt>
-      <dd class="col-xs-9 col-lg-10"> <%= document.description%></dd>
-      <dt class="col-xs-3 col-lg-2">Edit Access:</dt>
-      <dd class="col-xs-9 col-lg-10">
-      <% if document.edit_groups.present? %>
-            Groups: <%= document.edit_groups.join(', ') %>
-            <br/>
-        <% end %>
-        Users: <%= document.edit_people.join(', ') %>
-      </dd>
-    </dl>
-  </td>
 </tr>
