--- a/app/views/my/_index_partials/_list_files.html.erb
+++ b/app/views/my/_index_partials/_list_files.html.erb
@@ -22,10 +22,7 @@
               <span class="sr-only"><%= t("sufia.dashboard.my.sr.show_label") %> </span>
               <%= document.title_or_label %>
           <% end %>
-          <a href="#" class="small" title="Click for more details">
-            <i id="expand_<%= id %>" class="glyphicon glyphicon-chevron-right"  aria-hidden="true"></i>
-            <span class="sr-only"> <%= "#{t("sufia.dashboard.my.sr.detail_label")} #{document.title_or_label}" %></span>
-          </a>
+        <%# CHF: remove 'click for more details' / expanded-details row %>
         </div>
         <%= render_collection_list(gf) %>
       </div>
@@ -37,27 +34,5 @@
   </td>
   <td class="text-center">
     <%= render partial: 'action_menu', locals: { id: id, gf: gf } %>
-  </td>
-</tr>
-<tr id="detail_<%= id %>"> <!--  document detail"> -->
-  <td colspan="6">
-    <dl class="expanded-details row">
-      <dt class="col-xs-3 col-lg-2">File Name:</dt>
-      <dd class="col-xs-9 col-lg-4"><%= link_to document.label, sufia.generic_file_path(id) %></dd>
-      <dt class="col-xs-3 col-lg-2">File Format:</dt>
-      <dd class="col-xs-9 col-lg-4"><%= document.file_format %>JPG</dd>
-      <dt class="col-xs-3 col-lg-2">Creator:</dt>
-      <dd class="col-xs-9 col-lg-4"><%= document.creator %></dd>
-      <dt class="col-xs-3 col-lg-2">Depositor:</dt>
-      <dd class="col-xs-9 col-lg-4"><%= link_to_profile document.depositor %></dd>
-      <dt class="col-xs-3 col-lg-2">Edit Access:</dt>
-      <dd class="col-xs-9 col-lg-10">
-        <% if document.edit_groups.present? %>
-            Groups: <%= document.edit_groups.join(', ') %>
-            <br/>
-        <% end %>
-        Users: <%= document.edit_people.join(', ') %>
-      </dd>
-    </dl>
   </td>
 </tr>
