--- a/app/views/my/_index_partials/_list_files.html.erb
+++ b/app/views/my/_index_partials/_list_files.html.erb
@@ -6,29 +6,20 @@
     <%= batch_edit_select(document) %>&nbsp;
     <%# This block is for adding/removing the magic wand while batch updates are processing %>
     <% if gf.processing? %>
-        <i class="glyphicon glyphicon-time <%= 'ss-'+gf.batch.id %>"/>
+        <span class="glyphicon glyphicon-time <%= 'ss-'+gf.batch.id %>"></span>
     <% elsif gf.depositor != @user.user_key %>
-        <i class="glyphicon glyphicon-share-alt"/>
+        <span class="glyphicon glyphicon-share-alt"></span>
     <% end %>
   </td>
-  <td>
-    <div class="media">
-      <%= link_to sufia.generic_file_path(document), class: "media-left", "aria-hidden" => true do %>
-        <%= render_thumbnail_tag document, { class: "hidden-xs file_listing_thumbnail" }, { suppress_link: true } %>
-      <% end %>
-      <div class="media-body">
-        <div class="media-heading">
-          <%= link_to sufia.generic_file_path(document), id: "src_copy_link#{id}", class: "#{'document-title' if document.title_or_label == document.label}" do %>
-              <span class="sr-only"><%= t("sufia.dashboard.my.sr.show_label") %> </span>
-              <%= document.title_or_label %>
-          <% end %>
+  <td class="file-listing-links">
+    <%= link_to sufia.generic_file_path(document), id: "src_copy_link#{id}", class: "#{'document-title' if document.title_or_label == document.label}" do %>
+        <%= render_thumbnail_tag document, { class: "hidden-xs file_listing_thumbnail pull-left" }, { suppress_link: true } %>
+        <div class="file-listing-title"><span class="sr-only"><%= t("sufia.dashboard.my.sr.show_label") %> </span> <%= document.title_or_label %></div>
+    <% end %>
         <%# CHF: remove 'click for more details' / expanded-details row %>
-        </div>
-        <%= render_collection_list(gf) %>
-      </div>
-    </div>
+    <div class="part_of_collection"><%= render_collection_list(gf) %></div>
   </td>
-  <td class="text-center"><%= document.date_uploaded %> </td>
+  <td class="text-center"><%= document.create_date %> </td>
   <td class="text-center">
     <%= render_visibility_link document %>
   </td>
