Add button to metadata form to view opac bib data, resolve #140
* Add sierra api connection, get_bib
* Add 'get opac data' button which creates a text box
* Add opac data controller and routes so js can get opac api data
** Also clean bib number to 7 digits only.
* opac js pulls actual data from controller
* Get bib number from form for opac API call
* Re-populate single box each time opac data button is clicked
* Display json in readable layout

--- a/app/views/records/edit_fields/_identifier.html.erb
+++ b/app/views/records/edit_fields/_identifier.html.erb
@@ -1,3 +1,8 @@
 <%= f.input :identifier, as: :external_id,
   include_blank: true, value_method: :to_s, label_method: :to_s
 %>
+<div class='form-group' id='opac_data'>
+<%= button_tag type: 'button', class: 'btn', id: "load_opac_data" do %>
+  Load OPAC data
+<% end %>
+</div>
