--- a/app/views/records/edit_fields/_maker.html.erb
+++ b/app/views/records/edit_fields/_maker.html.erb
@@ -1,4 +1,4 @@
 <%= f.input :maker, as: :multi_value_select_text_with_help,
-  include_blank: true, options: Sufia.config.makers.keys,
+  include_blank: true, options: Rails.configuration.makers.keys,
   value_method: :to_s, label_method: lambda { |l| l.to_s.humanize }
 %>
