--- a/app/views/records/edit_fields/_genre_string.html.erb
+++ b/app/views/records/edit_fields/_genre_string.html.erb
@@ -1,4 +1,4 @@
 <%= f.input :genre_string, as: :multi_value_select,
-  include_blank: true, options: Sufia.config.genres,
+  include_blank: true, options: Rails.configuration.genres,
   value_method: :to_s, label_method: :to_s
 %>
