--- a/app/views/records/edit_fields/_rights.html.erb
+++ b/app/views/records/edit_fields/_rights.html.erb
@@ -1,4 +1,4 @@
 <% # TODO: watch for this fix upstream %>
-<%= f.input :rights, as: :select_with_help, collection: Sufia.config.cc_licenses,
-  input_html: { class: 'form-control', multiple: false, :name => 'generic_file[rights][]'}
+<%= f.input :rights, as: :select_with_help, collection: Rails.configuration.cc_licenses,
+  input_html: { class: 'form-control', multiple: false, :name => 'generic_work[rights][]'}
 %>
