Sufia 7 upgrade: Edit form loads

--- a/app/views/records/edit_fields/_file_creator.html.erb
+++ b/app/views/records/edit_fields/_file_creator.html.erb
@@ -1,1 +1,1 @@
-<%= f.input :file_creator, as: :select_with_help, collection: Rails.configuration.file_creators %>
+<%= f.input :file_creator, as: :select, collection: Rails.configuration.file_creators %>
