--- a/app/views/records/edit_fields/_rights_holder.html.erb
+++ b/app/views/records/edit_fields/_rights_holder.html.erb
@@ -1,1 +1,1 @@
-<%= f.input :rights_holder, as: :single_value_with_help, required: f.object.required?(:rights_holder) %>
+<%= f.input :rights_holder, as: :string, required: f.object.required?(:rights_holder) %>
