--- a/app/views/records/edit_fields/_admin_note.html.erb
+++ b/app/views/records/edit_fields/_admin_note.html.erb
@@ -1,1 +1,1 @@
-<%= f.input :admin_note, as: :multi_value_with_help, input_html: { rows: '4', type: 'textarea'}, required: false %>
+<%= f.input :admin_note, as: :multi_value, input_html: { rows: '4', type: 'textarea'}, required: false %>
