--- a/app/views/records/edit_fields/_division.html.erb
+++ b/app/views/records/edit_fields/_division.html.erb
@@ -1,1 +1,1 @@
-<%= f.input :division, as: :select_with_help, collection: Rails.configuration.divisions %>
+<%= f.input :division, as: :select, collection: Rails.configuration.divisions %>
