Sufia 7 upgrade: Change files to works in transfers area of dashboard

--- a/app/views/dashboard/_index_partials/_transfers.html.erb
+++ b/app/views/dashboard/_index_partials/_transfers.html.erb
@@ -3,8 +3,8 @@
     <h4>Pending Sent Transfers</h4>
   </div>
   <div class="col-xs-12 col-sm-3 transfer_link">
-    <%= link_to sufia.dashboard_files_path  do %>
-        <%= t("sufia.dashboard.transfer_files_link") %>
+    <%= link_to sufia.dashboard_works_path  do %>
+        <%= t("sufia.dashboard.transfer_works_link") %>
     <% end %>
     <br />
     <%= link_to sufia.transfers_path do %>
