--- a/app/views/records/edit_fields/_maker.html.erb
+++ b/app/views/records/edit_fields/_maker.html.erb
@@ -1,4 +1,4 @@
-<%= f.input :maker, as: :multi_value_select_text_with_help,
+<%= f.input :maker, as: :multi_value_select_text,
   include_blank: true, options: Rails.configuration.makers,
   value_method: :to_s, label_method: lambda { |l| l.to_s.humanize }
 %>
