--- a/app/views/records/edit_fields/_place.html.erb
+++ b/app/views/records/edit_fields/_place.html.erb
@@ -1,4 +1,4 @@
-<%= f.input :place, as: :multi_value_select_text_with_help,
+<%= f.input :place, as: :multi_value_select_text,
   include_blank: true, options: Rails.configuration.places,
   value_method: :to_s, label_method: lambda { |v| v.to_s.humanize }
 %>
