--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -1,5 +1,6 @@
 <%= presenter.attribute_to_html(:creator, render_as: :faceted ) %>
 <%= presenter.attribute_to_html(:contributor, label: 'Contributors', render_as: :faceted) %>
+<%= presenter.attribute_to_html(:genre_string) %>
 <%= presenter.attribute_to_html(:subject, render_as: :faceted ) %>
 <%= presenter.attribute_to_html(:publisher, render_as: :faceted ) %>
 <%= presenter.attribute_to_html(:language, render_as: :faceted ) %>
