--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -1,12 +1,35 @@
-<%= presenter.attribute_to_html(:creator, render_as: :faceted ) %>
+<%= presenter.attribute_to_html(:creator_of_work, label: 'Creators', render_as: :faceted ) %>
 <%= presenter.attribute_to_html(:contributor, label: 'Contributors', render_as: :faceted) %>
-<%= presenter.attribute_to_html(:genre_string) %>
-<%= presenter.attribute_to_html(:subject, render_as: :faceted ) %>
-<%= presenter.attribute_to_html(:publisher, render_as: :faceted ) %>
-<%= presenter.attribute_to_html(:language, render_as: :faceted ) %>
-<%= presenter.attribute_to_html(:identifier, render_as: :identifier) %>
-<%= presenter.attribute_to_html(:keyword, render_as: :faceted ) %>
+<%= presenter.attribute_to_html(:artist) %>
+<%= presenter.attribute_to_html(:author) %>
+<%= presenter.attribute_to_html(:addressee) %>
+<%= presenter.attribute_to_html(:interviewee) %>
+<%= presenter.attribute_to_html(:interviewer) %>
+<%= presenter.attribute_to_html(:manufacturer) %>
+<%= presenter.attribute_to_html(:photographer) %>
+<%= presenter.attribute_to_html(:publisher) %>
+<%# presenter.attribute_to_html(:date_of_work) %>
 <%= presenter.attribute_to_html(:date_created, render_as: :linked, search_field: 'date_created_tesim' ) %>
-<%= presenter.attribute_to_html(:based_near, render_as: :faceted ) %>
-<%= presenter.attribute_to_html(:related_url) %>
+<%= presenter.attribute_to_html(:place_of_interview) %>
+<%= presenter.attribute_to_html(:place_of_manufacture) %>
+<%= presenter.attribute_to_html(:place_of_publication) %>
+<%= presenter.attribute_to_html(:place_of_creation) %>
 <%= presenter.attribute_to_html(:resource_type, render_as: :faceted ) %>
+<%= presenter.attribute_to_html(:genre_string) %>
+<%= presenter.attribute_to_html(:medium) %>
+<%= presenter.attribute_to_html(:extent) %>
+<%= presenter.attribute_to_html(:language, render_as: :faceted ) %>
+<%# presenter.attribute_to_html(:inscription) %>
+<%= presenter.attribute_to_html(:subject, render_as: :faceted ) %>
+<%= presenter.attribute_to_html(:division) %>
+<%= presenter.attribute_to_html(:series_arrangement) %>
+<%# TODO: , render_as: :physical_container %>
+<%= presenter.attribute_to_html(:physical_container) %>
+<%= presenter.attribute_to_html(:related_url) %>
+<%= presenter.attribute_to_html(:rights) %>
+<%= presenter.attribute_to_html(:rights_holder) %>
+<%= presenter.attribute_to_html(:credit_line) %>
+<%= presenter.attribute_to_html(:additional_credit) %>
+<%= presenter.attribute_to_html(:file_creator) %>
+<%= presenter.attribute_to_html(:admin_note) %>
+<%= presenter.attribute_to_html(:identifier, render_as: :identifier) %>
