--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -19,7 +19,7 @@
 <%= presenter.attribute_to_html(:medium) %>
 <%= presenter.attribute_to_html(:extent) %>
 <%= presenter.attribute_to_html(:language, render_as: :faceted ) %>
-<%# presenter.attribute_to_html(:inscription) %>
+<%= presenter.attribute_to_html(:inscription) %>
 <%= presenter.attribute_to_html(:subject, render_as: :faceted ) %>
 <%= presenter.attribute_to_html(:division) %>
 <%= presenter.attribute_to_html(:series_arrangement) %>
