Sufia 7 upgrade: Add date of work to index for display

--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -8,7 +8,7 @@
 <%= presenter.attribute_to_html(:manufacturer) %>
 <%= presenter.attribute_to_html(:photographer) %>
 <%= presenter.attribute_to_html(:publisher) %>
-<%# presenter.attribute_to_html(:date_of_work) %>
+<%= presenter.attribute_to_html(:date_of_work) %>
 <%= presenter.attribute_to_html(:date_created, render_as: :linked, search_field: 'date_created_tesim' ) %>
 <%= presenter.attribute_to_html(:place_of_interview) %>
 <%= presenter.attribute_to_html(:place_of_manufacture) %>
