Display lightbox previews, fixes #9

--- a/app/assets/stylesheets/chf-overrides.css.scss
+++ b/app/assets/stylesheets/chf-overrides.css.scss
@@ -29,3 +29,8 @@
     max-width: 40em;
   }
 }
+
+// fit the preview modal to the contained image
+.preview-modal .modal-dialog {
+  display: table;
+}
