--- a/app/views/my/_index_partials/_list_collections.html.erb
+++ b/app/views/my/_index_partials/_list_collections.html.erb
@@ -1,15 +1,14 @@
-<!-- scholarsphere override -->
 <% id = document.id %>
-<tr id="document_<%= id %>" class="<%= cycle("","zebra") %>">
-  <td width="3%"></td>
-  <td width="41%">
+<tr id="document_<%= id %>">
+  <td></td>
+  <td>
     <div class="media">
-      <%= link_to [collections, document], class: "pull-left", "aria-hidden" => true do %>
-          <%= image_tag "site_images/collection-icon.svg", class: "collection-icon-small" %>
+      <%= link_to document, class: "pull-left", "aria-hidden" => true do %>
+          <span class="fa fa-cubes collection-icon-small"></span>
       <% end %>
       <div class="media-body">
         <div class="media-heading">
-          <%= link_to  collections.collection_path(id), id: "src_copy_link#{id}" do %>
+          <%= link_to document, id: "src_copy_link#{id}" do %>
               <span class="sr-only"><%= t("sufia.dashboard.my.sr.show_label") %> </span>
               <%= document.title_or_label %>
           <% end %>
@@ -18,11 +17,11 @@
       </div>
     </div>
   </td>
-  <td width="17%" class="text-center"><%= document.create_date %> </td>
-  <td width="5%" class="text-center visibility-link">
-    <%= render_visibility_label(document) %>
+  <td class="text-center"><%= document.create_date %> </td>
+  <td class="text-center">
+    <%= render_visibility_link(document) %>
   </td>
   <td class="text-center">
-    <%= render partial:'collection_action_menu', locals: { id: id } %>
+    <%= render 'collection_action_menu', id: id %>
    </td>
 </tr>
