--- a/app/views/records/edit_fields/_resource_type.html.erb
+++ b/app/views/records/edit_fields/_resource_type.html.erb
@@ -1,5 +1,7 @@
 <%= f.input key, as: :select,
   collection: ResourceTypesService.select_options,
   include_blank: false,
-  input_html: { class: 'form-control', size: ResourceTypesService.select_options.size },
+  input_html: { class: 'form-control',
+                size: ResourceTypesService.select_options.size,
+                multiple: true, },
   required: f.object.required?(key) %>
