--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -1,3 +1,4 @@
+<%= presenter.attribute_to_html(:admin_set, render_as: :faceted) %>
 <%= presenter.attribute_to_html(:creator_of_work, label: 'Creators', render_as: :faceted ) %>
 <%= presenter.attribute_to_html(:contributor, label: 'Contributors', render_as: :faceted) %>
 <%= presenter.attribute_to_html(:artist) %>
