--- a/app/views/curation_concerns/base/_form_metadata.html.erb
+++ b/app/views/curation_concerns/base/_form_metadata.html.erb
@@ -15,7 +15,7 @@
         <%# CHF remove 'additional fields' box now that we have the save widget %>
         <%# link_to t('sufia.works.edit.additional_fields'),
                     '#extended-terms',
-                    class: 'btn btn-default',
+                    class: 'btn btn-default additional-fields',
                     data: { toggle: 'collapse' },
                     role: "button",
                     'aria-expanded'=> "false",
