--- a/app/assets/stylesheets/chf-overrides.css.scss
+++ b/app/assets/stylesheets/chf-overrides.css.scss
@@ -29,3 +29,14 @@
     max-width: 40em;
   }
 }
+
+// fit the preview modal to the contained image
+.preview-modal .modal-dialog {
+  display: table;
+  width: 1%;
+}
+// this bizarre hack keeps long titles from making the modal wider
+.preview-modal .modal-body {
+  height: auto;
+  overflow: hidden;
+}
