--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -4,10 +4,12 @@
 <%= presenter.attribute_to_html(:artist) %>
 <%= presenter.attribute_to_html(:author) %>
 <%= presenter.attribute_to_html(:addressee) %>
+<%= presenter.attribute_to_html(:engraver) %>
 <%= presenter.attribute_to_html(:interviewee) %>
 <%= presenter.attribute_to_html(:interviewer) %>
 <%= presenter.attribute_to_html(:manufacturer) %>
 <%= presenter.attribute_to_html(:photographer) %>
+<%= presenter.attribute_to_html(:printer_of_plates) %>
 <%= presenter.attribute_to_html(:publisher) %>
 <%= presenter.attribute_to_html(:date_of_work) %>
 <%= presenter.attribute_to_html(:date_created, render_as: :linked, search_field: 'date_created_tesim' ) %>
