Render resource type in show views as label, not URI, fixes #194

--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -17,7 +17,7 @@
 <%= presenter.attribute_to_html(:place_of_manufacture) %>
 <%= presenter.attribute_to_html(:place_of_publication) %>
 <%= presenter.attribute_to_html(:place_of_creation) %>
-<%= presenter.attribute_to_html(:resource_type, render_as: :faceted ) %>
+<%= presenter.attribute_to_html(:resource_type, render_as: :resource_type ) %>
 <%= presenter.attribute_to_html(:genre_string) %>
 <%= presenter.attribute_to_html(:medium) %>
 <%= presenter.attribute_to_html(:extent) %>
