--- a/app/views/curation_concerns/file_sets/media_display/_image.html.erb
+++ b/app/views/curation_concerns/file_sets/media_display/_image.html.erb
@@ -5,20 +5,24 @@
                     class: "representative-media",
                     alt: "",
                     role: "presentation" %>
-      <%= link_to image_tag(thumbnail_url(file_set),
-                            class: "representative-media",
-                            alt: "",
-                            role: "presentation"),
-                  "#", 
-                  { "aria-label" => "Load preview image",
-                    "data-target" => "#preview-#{file_set.id}",
-                    "data-toggle" => "modal",
-                    title: "Preview image in lightbox" } %>
-      <%= link_to main_app.download_path(file_set),
-                  target: "_new",
-                  class: "btn btn-default" do %>
-          <%= t('curation_concerns.show.downloadable_content.image_link') %>
-      <% end %>
+      <div>
+        <%= link_to image_tag(thumbnail_url(file_set),
+                              class: "representative-media",
+                              alt: "",
+                              role: "presentation"),
+                    "#",
+                    { "aria-label" => "Load preview image",
+                      "data-target" => "#preview-#{file_set.id}",
+                      "data-toggle" => "modal",
+                      title: "Preview image in lightbox" } %>
+      </div>
+      <div>
+        <%= link_to main_app.download_path(file_set),
+                    target: "_new",
+                    class: "btn btn-default" do %>
+            <%= t('curation_concerns.show.downloadable_content.image_link') %>
+        <% end %>
+      </div>
     </div>
 <% else %>
     <div>
@@ -26,7 +30,7 @@
                             class: "representative-media",
                             alt: "",
                             role: "presentation"),
-                  "#", 
+                  "#",
                   { "aria-label" => "Load preview image",
                     "data-target" => "#preview-#{file_set.id}",
                     "data-toggle" => "modal",
