Move rights field up in record view, fixes #249

--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -29,6 +29,7 @@
 <%# TODO: , render_as: :physical_container %>
 <%= presenter.attribute_to_html(:physical_container) %>
 <%= presenter.attribute_to_html(:related_url) %>
+<%= presenter.attribute_to_html(:rights, render_as: :rights) %>
 <%= presenter.attribute_to_html(:rights_holder) %>
 <%= presenter.attribute_to_html(:credit_line) %>
 <%= presenter.attribute_to_html(:additional_credit) %>
