--- a/app/views/collections/_form.html.erb
+++ b/app/views/collections/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for @form, html: { class: 'editor' } do |f| %>
   <div id="descriptions_display">
-    <h2 class="non lower"><%= t('sufia.collection.edit.description') %></h2>
+    <h2 class="non lower"><%= t('sufia.collection.form.description') %></h2>
     <div id="base-terms">
       <% f.object.primary_terms.each do |term| %>
         <%= render_edit_field_partial(term, f: f) %>
