--- a/app/views/curation_concerns/base/_form_metadata.html.erb
+++ b/app/views/curation_concerns/base/_form_metadata.html.erb
@@ -12,14 +12,7 @@
             <%= render_edit_field_partial(term, f: f) %>
           <% end %>
         </div>
-        <%# CHF remove 'additional fields' box now that we have the save widget %>
-        <%# link_to t('sufia.works.edit.additional_fields'),
-                    '#extended-terms',
-                    class: 'btn btn-default additional-fields',
-                    data: { toggle: 'collapse' },
-                    role: "button",
-                    'aria-expanded'=> "false",
-                    'aria-controls'=> "extended-terms" %>
+        <%# CHF removed 'additional fields' box now that we have the save widget %>
         <div id="extended-terms">
           <%= render 'form_media', f: f %>
           <% f.object.secondary_terms.each do |term| %>
