--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -1,4 +1,5 @@
 <%= presenter.attribute_to_html(:admin_set, render_as: :faceted) %>
+<%= presenter.attribute_to_html(:additional_title) %>
 <%= presenter.attribute_to_html(:identifier, render_as: :identifier) %>
 <%= presenter.attribute_to_html(:artist) %>
 <%= presenter.attribute_to_html(:author) %>
