--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -30,7 +30,7 @@
 <%= presenter.attribute_to_html(:series_arrangement) %>
 <%# TODO: , render_as: :physical_container %>
 <%= presenter.attribute_to_html(:physical_container) %>
-<%= presenter.attribute_to_html(:related_url) %>
+<%= presenter.attribute_to_html(:related_url, render_as: :blank_target) %>
 <%= presenter.attribute_to_html(:rights, render_as: :rights) %>
 <%= presenter.attribute_to_html(:rights_holder) %>
 <%= presenter.attribute_to_html(:credit_line) %>
