additional title is h2 styled like h4, not h4

--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -1,1 +1,9 @@
+// There seems to be no existing css class allowing us to scope
+// this stuff just to generic work 'show' page. If there was, I'd use it.
+// Perhaps it should be added later.
 
+.additional-titles {
+  h2 {
+    @extend h4;
+  }
+}
