--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -18,14 +18,14 @@
 <%= presenter.attribute_to_html(:place_of_interview) %>
 <%= presenter.attribute_to_html(:place_of_manufacture) %>
 <%= presenter.attribute_to_html(:place_of_publication) %>
-<%= presenter.attribute_to_html(:resource_type, render_as: :faceted ) %>
+<%= presenter.attribute_to_html(:resource_type, render_as: :faceted, label: "Format" ) %>
 <%= presenter.attribute_to_html(:genre_string) %>
 <%= presenter.attribute_to_html(:medium) %>
 <%= presenter.attribute_to_html(:extent) %>
 <%= presenter.attribute_to_html(:language, render_as: :faceted ) %>
 <%= presenter.attribute_to_html(:inscription) %>
 <%= presenter.attribute_to_html(:subject, render_as: :faceted ) %>
-<%= presenter.attribute_to_html(:division) %>
+<%= presenter.attribute_to_html(:division, label: "Department") %>
 <%= presenter.attribute_to_html(:series_arrangement) %>
 <%# TODO: , render_as: :physical_container %>
 <%= presenter.attribute_to_html(:physical_container) %>
