Fix display of credit_line in edit forms
value was being displayed as an ActiveTriples object/memory
location, due to changes in AT between 0.7.1 and 0.11.0

--- a/app/views/records/edit_fields/_credit_line.html.erb
+++ b/app/views/records/edit_fields/_credit_line.html.erb
@@ -1,1 +1,3 @@
-<%= f.input :credit_line, as: :string, disabled: true %>
+<%# this is a single-value field in practice, but in rdf as multi-valued %>
+<%# field is auto-generated data for everything in the collection %>
+<%= f.input :credit_line, as: :string, disabled: true, input_html: {value: f.object.credit_line.first} %>
