--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -14,10 +14,10 @@
 <%= presenter.attribute_to_html(:publisher, render_as: :faceted, search_field: 'maker_facet') %>
 <%= presenter.attribute_to_html(:date_of_work) %>
 <%= presenter.attribute_to_html(:date_created, render_as: :linked, search_field: 'date_created_tesim' ) %>
-<%= presenter.attribute_to_html(:place_of_creation) %>
-<%= presenter.attribute_to_html(:place_of_interview) %>
-<%= presenter.attribute_to_html(:place_of_manufacture) %>
-<%= presenter.attribute_to_html(:place_of_publication) %>
+<%= presenter.attribute_to_html(:place_of_creation, render_as: :faceted, search_field: 'place_facet') %>
+<%= presenter.attribute_to_html(:place_of_interview, render_as: :faceted, search_field: 'place_facet') %>
+<%= presenter.attribute_to_html(:place_of_manufacture, render_as: :faceted, search_field: 'place_facet') %>
+<%= presenter.attribute_to_html(:place_of_publication, render_as: :faceted, search_field: 'place_facet') %>
 <%= presenter.attribute_to_html(:resource_type, render_as: :faceted, label: "Format" ) %>
 <%= presenter.attribute_to_html(:genre_string) %>
 <%= presenter.attribute_to_html(:medium) %>
