--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -1,4 +1,3 @@
-<%= presenter.attribute_to_html(:identifier, render_as: :identifier) %>
 <%= presenter.attribute_to_html(:artist) %>
 <%= presenter.attribute_to_html(:author) %>
 <%= presenter.attribute_to_html(:addressee) %>
@@ -33,5 +32,11 @@
 <%= presenter.attribute_to_html(:rights_holder) %>
 <%= presenter.attribute_to_html(:credit_line) %>
 <%= presenter.attribute_to_html(:additional_credit) %>
-<%= presenter.attribute_to_html(:file_creator) %>
-<%= presenter.attribute_to_html(:admin_note) %>
+
+<% if staff_user? %>
+  <tr><th colspan=2><h2>Staff-only Viewable Descriptions</h2></th></tr>
+  <%= presenter.attribute_to_html(:identifier, render_as: :identifier) %>
+  <%= presenter.attribute_to_html(:file_creator) %>
+  <%= presenter.attribute_to_html(:admin_note) %>
+<% end %>
+
