Icon large rights statement under download button
It currently just uses Hevetica for now. Our whole site just uses
Helvetica. It ain't super pretty, but I think it makes more sense
to wait till we make this whole page pretty after soft launch, then
micro-design this particular element on a page that is otherwise
still pretty messy and without really style determined.

--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -7,3 +7,23 @@
     @extend h4;
   }
 }
+
+.large-rights-statement {
+  margin-top: 15px;
+
+  @include clearfix;
+
+  .rights-statement-logo {
+    width: 40px;
+    float: left;
+    margin-right: 0.5em;
+  }
+  .rights-statement-label {
+    font-size: 18px;
+    line-height: 1;
+    text-transform: uppercase;
+    font-weight: bold;
+    line-height: 1
+  }
+
+}
