--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -22,6 +22,7 @@
     <%= render "show_actions", presenter: @presenter %>
     <%= t('.last_modified', value: @presenter.date_modified) %>
     <%= render 'representative_media', presenter: @presenter %>
+    <%= render 'large_rights_statement', presenter: @presenter %>
     <%= render 'social_media' %>
     <%= render 'citations', presenter: @presenter %>
   </div>
