display okay even if no rights statement
just skip display of large rights statement

--- a/app/views/curation_concerns/base/_large_rights_statement.html.erb
+++ b/app/views/curation_concerns/base/_large_rights_statement.html.erb
@@ -1,6 +1,8 @@
-<div class="large-rights-statement">
-  <%= link_to presenter.rights_url, class: "rights-statement-link" do %>
-    <%= image_tag(presenter.rights_icon, class: "rights-statement-logo")  %>
-    <span class="rights-statement-label"><%= presenter.rights_icon_label %></span>
-  <% end %>
-</div>
+<% if presenter.has_rights_statement? %>
+  <div class="large-rights-statement">
+    <%= link_to presenter.rights_url, class: "rights-statement-link" do %>
+      <%= image_tag(presenter.rights_icon, class: "rights-statement-logo")  %>
+      <span class="rights-statement-label"><%= presenter.rights_icon_label %></span>
+    <% end %>
+  </div>
+<% end %>
