--- a/app/views/synthetic_category/_sort_and_per_page.html.erb
+++ b/app/views/synthetic_category/_sort_and_per_page.html.erb
@@ -18,6 +18,9 @@ https://github.com/projecthydra/sufia/blob/8bb451451a492e443687f8c5aff4882cac56a
                  &nbsp;&nbsp;&nbsp;
                  <button class="btn btn-info"><span class="glyphicon glyphicon-refresh"></span> Refresh</button>
                </fieldset>
+                 <div class="view-type col-xs-12 col-sm-3 col-md-4 col-lg-2">
+                   <strong><%= @response.total %> Items</strong>
+                 </div>
              </div>
          <% end %>
       <% end %>
