Fix lightbox for nested works, resolves #255

--- a/app/views/curation_concerns/base/_member.html.erb
+++ b/app/views/curation_concerns/base/_member.html.erb
@@ -6,7 +6,7 @@
                             role: "presentation"),
                   "#", 
                   { "aria-label" => "Load preview image",
-                    "data-target" => "#preview-#{member.id}",
+                    "data-target" => "#preview-#{preview_id(member)}",
                     "data-toggle" => "modal",
                     title: "Preview image in lightbox" } %>
   </td>
