--- a/app/views/curation_concerns/base/_lightbox_preview.html.erb
+++ b/app/views/curation_concerns/base/_lightbox_preview.html.erb
@@ -1,8 +1,8 @@
-<div class="modal fade preview-modal" id="preview-<%= preview_id %>" tabindex='-1'>
+<div class="modal fade preview-modal" id="preview-<%= preview_id(presenter) %>" tabindex='-1'>
   <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-body">
-       <%= image_tag main_app.download_path(preview_id, file: "jpeg") %>
+       <%= image_tag main_app.download_path(preview_id(presenter), file: "jpeg") %>
      </div>
      <div class="modal-footer">
        <p><%= presenter.title.first %></p>
