--- a/app/views/curation_concerns/file_sets/media_display/_image.html.erb
+++ b/app/views/curation_concerns/file_sets/media_display/_image.html.erb
@@ -19,6 +19,8 @@
       <div>
         <%= link_to main_app.download_path(file_set),
                     target: "_new",
+                    id: "file_download",
+                    data: { label: file_set.id) },
                     class: "btn btn-default" do %>
             <%= t('curation_concerns.show.downloadable_content.image_link') %>
         <% end %>
