Initial html outline for new homepage design, refs #309

--- a/app/views/sufia/homepage/index.html.erb
+++ b/app/views/sufia/homepage/index.html.erb
@@ -1,26 +1,33 @@
 <% provide :page_title, application_name %>
 
-<% if @presenter.display_share_button? %>
-  <div class="home_share_work row">
-    <div class="col-sm-12 text-center">
-      <% if signed_in? %>
-        <%= link_to '#',
-          class: "btn btn-primary btn-lg",
-          data: { behavior: 'select-work', target: '#worktypes-to-create', 'create-type' => 'single' } do %>
-          <i class="glyphicon glyphicon-upload"></i> <%= t('sufia.share_button') %>
-        <% end %>
-      <% else %>
-        <%= link_to sufia.dashboard_index_path,
-          class: "btn btn-primary btn-lg" do %>
-          <i class="glyphicon glyphicon-upload"></i> <%= t('sufia.share_button') %>
-        <% end %>
-      <% end %>
-      <p><a href="/terms/">Terms of Use</a></p>
+<div class="homepage-wrapper">
+
+  <div class="row hero-search-container">
+    <div class="hero-image">
+      <%# TODO: image credit inset bottom left %>
+    </div>
+    <div class="search-container">
+      <div class="digital-description">
+      </div>
+      <div class="search-callouts">
+        <%= render 'catalog/search_form' %>
+        <%# TODO: add 'public domain only' toggle %>
+        <%# TODO: browse_all button %>
+      </div>
     </div>
   </div>
-<% end %>
 
-<div class="row home-content">
-  <%= render 'home_content' %>
+  <%# TODO: recent additions will go here %>
+
+  <div class="row digital-collections">
+    <%= render 'home_content' %>
+  </div>
+
+  <div class="row featured-collection-container">
+    <div class="featured-collection-image">
+    </div>
+    <div class="featured-collection-callouts">
+    </div>
+  </div>
+
 </div>
-<%= tiny_mce_stuff if can? :update, ContentBlock%>
