--- a/app/assets/stylesheets/chf-overrides.css.scss
+++ b/app/assets/stylesheets/chf-overrides.css.scss
@@ -1,9 +1,3 @@
-// front page overrides
-#home_header  {
-  background-image: image-url('molecules_that_matter.jpg') !important;
-  background-position: 50% 50% !important;
-}
-
 // overrides for maker field
 .form-group {
   .double-input {
@@ -30,6 +24,7 @@
   }
 }
 
+// Show page
 // fit the preview modal to the contained image
 .preview-modal .modal-dialog {
   display: table;
