collections index, spacers to visibly left-align last row
Kinda hacky, but works. Couldn't find a way to do it purely in CSS
without adding those spacer divs.

Also moved some values to variables so the exact numbers didn't
have to be repeated in more than one place. I think these variables
are technically SCSS global, but they are only meant for use in this file,
so I think it's fine to have em in this file. I named in long names
attempted namespace to this file. Also kinda hacky, I dunno, I'm
also figuring out best ways to organize this stuff!

--- a/app/assets/stylesheets/local/collections.scss
+++ b/app/assets/stylesheets/local/collections.scss
@@ -1,16 +1,20 @@
+$collection-index-box-width: 266px;
+$collection-index-box-height: 266px;
+$collection-index-box-margin: 17px;
+
 .collections-index {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
-  margin: -17px; /* negate flex-item margins on outer border */
+  margin: -1 * $collection-index-box-margin; /* negate flex-item margins on outer border */
 
   .collection {
     position: relative;
-    width: 266px;
-    height: 266px;
-    margin: 17px;
+    width: $collection-index-box-width;
+    height: $collection-index-box-height;
+    margin: $collection-index-box-margin;
 
     a,
     a:link,
@@ -35,7 +39,15 @@
       .collection-title {
         text-align: center;
       }
-
     }
+  }
+
+  /* A 0-height box that spaces out columns to left-align items in
+     last column */
+  .collection-spacer {
+    visibility: hidden;
+    width: $collection-index-box-width;
+    height: 0;
+    margin: 0 $collection-index-box-margin;
   }
 }
