--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,3 +1,9 @@
 <div class="collections-index">
   <%= render partial: "collection_teaser", collection: @presenters, as: :presenter %>
+
+  <%# hack to keep our last line of collection teasers left-aligned, assuming
+      max four-columns %>
+  <div class="collection-spacer"></div>
+  <div class="collection-spacer"></div>
+  <div class="collection-spacer"></div>
 </div>
