--- a/app/assets/stylesheets/local/collections.scss
+++ b/app/assets/stylesheets/local/collections.scss
@@ -3,50 +3,58 @@ $collection-index-box-height: 266px;
 $collection-index-box-margin: 17px;
 
 .collections-index {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: -1 * $collection-index-box-margin; /* negate flex-item margins on outer border */
-
-  .collection {
-    position: relative;
-    width: $collection-index-box-width;
-    height: $collection-index-box-height;
-    margin: $collection-index-box-margin;
-
-    a,
-    a:link,
-    a:active,
-    a:visited,
-    a:hover {
-      color: white;
-      text-decoration: none;
-      opacity: 1;
-    }
-
-    .collection-title-wrapper {
-      /* overlay on image */
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 75px;
-      background-color: $brand-inverse;
-      padding: 10px;
-
-      .collection-title {
-        text-align: center;
-      }
-    }
+  .collections-index-title {
+    text-align: center;
+    margin-top: 48px;
+    margin-bottom: 43px;
   }
 
-  /* A 0-height box that spaces out columns to left-align items in
-     last column */
-  .collection-spacer {
-    visibility: hidden;
-    width: $collection-index-box-width;
-    height: 0;
-    margin: 0 $collection-index-box-margin;
+  .collections-index-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: -1 * $collection-index-box-margin; /* negate flex-item margins on outer border */
+
+    .collection {
+      position: relative;
+      width: $collection-index-box-width;
+      height: $collection-index-box-height;
+      margin: $collection-index-box-margin;
+
+      a,
+      a:link,
+      a:active,
+      a:visited,
+      a:hover {
+        color: white;
+        text-decoration: none;
+        opacity: 1;
+      }
+
+      .collection-title-wrapper {
+        /* overlay on image */
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 75px;
+        background-color: $brand-inverse;
+        padding: 10px;
+
+        .collection-title {
+          text-align: center;
+        }
+      }
+    }
+
+    /* A 0-height box that spaces out columns to left-align items in
+       last column */
+    .collection-spacer {
+      visibility: hidden;
+      width: $collection-index-box-width;
+      height: 0;
+      margin: 0 $collection-index-box-margin;
+    }
   }
 }
