Restore the search box to non-frontpage static pages

--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -1,1 +1,11 @@
+<%# overwrites https://github.com/projecthydra/sufia/blob/v7.3.0/app/views/layouts/homepage.html.erb %>
+<%# Sufia uses the homepage layout across many static pages.
+    We need to distinguish between general static pages and our frontpage.
+    So locally, this isn't actually a homepage layout; it is used for other static pages.
+    Our frontpage uses the sufia layout directly. %>
+<%# include the search bar on all static pages %>
+<% content_for(:navbar) do %>
+  <%= render '/controls' %>
+<% end %>
+
 <%= render template: 'layouts/sufia' %>
