--- a/app/views/_controls.html.erb
+++ b/app/views/_controls.html.erb
@@ -1,3 +1,4 @@
+<%# overrides https://github.com/projecthydra/sufia/blob/v7.3.0/app/views/_controls.html.erb %>
 <nav id="searchbar" class="navbar navbar-default navbar-static-top">
   <div class="container-fluid">
     <div class="row">
