--- a/app/views/_masthead.html.erb
+++ b/app/views/_masthead.html.erb
@@ -11,12 +11,13 @@
     </div>
   </nav>
 <% end %>
-<nav id="masthead" class="navbar navbar-inverse navbar-static-top" role="navigation">
+<nav id="masthead" class="masthead navbar navbar-inverse navbar-static-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-collapse" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
+        <%# these make the hamburger %>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -24,14 +25,11 @@
       <%= render '/logo' %>
     </div>
 
-    <div class="collapse navbar-collapse" id="top-navbar-collapse">
+    <div class="collapse navbar-collapse pull-right" id="top-navbar-collapse" role="navigation">
       <div class="nav navbar-nav navbar-right">
-        <li <%= 'class=active' if current_page?(sufia.about_path) %>>
-          <%= link_to t(:'sufia.controls.about'), sufia.about_path, :'data-no-turbolink'=>"true" %></li>
-        <li <%= 'class=active' if action_name == "help" %>>
-          <%= link_to t(:'sufia.controls.help'), sufia.help_path %></li>
-        <li <%= 'class=active' if current_page?(sufia.contact_path) %>>
-          <%= link_to t(:'sufia.controls.contact'), sufia.contact_path %></li>
+        <li><%= link_to t(:'sufia.controls.about').upcase, sufia.about_path, :'data-no-turbolink'=>"true" %></li>
+        <li><%= link_to t(:'sufia.controls.help').upcase, sufia.help_path %></li>
+        <li><%= link_to t(:'sufia.controls.contact').upcase, sufia.contact_path %></li>
       </ul><!-- /.nav -->
     </div>
   </div>
