--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -1,6 +1,16 @@
 <% provide :page_title, @presenter.page_title %>
-<div itemscope itemtype="http://schema.org/CreativeWork" class="row">
-  <div class="col-xs-12">
+
+<div class="work-show">
+  <div itemscope itemtype="http://schema.org/CreativeWork" class="row">
+
+  <% if current_ability.current_user.staff? %>
+    <div class="work-show-admin">
+      <%= render "show_actions", presenter: @presenter %>
+      <%= render 'workflow_actions_widget', presenter: @presenter %>
+    </div>
+  <% end %>
+
+  <div class="work-show-title">
     <header>
       <%= render 'work_title', presenter: @presenter %>
       <% if @presenter.additional_title.present? %>
@@ -11,31 +21,74 @@
         </ul>
       <% end %>
     </header>
-
   </div>
-  <div class="col-sm-8">
+
+  <div class="work-show-representative">
+      <%= render 'representative_media', presenter: @presenter %>
+      <div class="rights-and-social">
+        <%= render 'large_rights_statement', presenter: @presenter %>
+        <%= render 'social_media' %>
+      </div>
+  </div>
+
+
+  <div class="work-show-metadata">
     <%= render 'work_description', presenter: @presenter %>
     <%= render 'relationships', presenter: @presenter %>
     <%= render 'metadata', presenter: @presenter %>
-  </div>
-  <div class="col-sm-4">
-    <%= render "show_actions", presenter: @presenter %>
-    <%= t('.last_modified', value: @presenter.date_modified) %>
-    <%= render 'representative_media', presenter: @presenter %>
-    <%= render 'large_rights_statement', presenter: @presenter %>
-    <%= render 'social_media' %>
     <%= render 'citations', presenter: @presenter %>
   </div>
-</div>
 
-<div class="row">
-  <div class="col-sm-12">
-    <%= render 'items', presenter: @presenter %>
-    <%= render 'workflow_actions_widget', presenter: @presenter %>
-    <%#= render 'sharing_with', presenter: @presenter %>
-    <%#= render 'user_activity', presenter: @presenter %>
+
+  <%# these are not in a div so they can wrap around the bottom of the metadata
+      div to take up all space. Experiment? %>
+  <%= render partial: 'chf_show_page', collection: @presenter.member_presenters, as: :member %>
+
+
+  <hr>
+
+
+
+
+
+
+    <div class="col-xs-12">
+      <header>
+        <%= render 'work_title', presenter: @presenter %>
+        <% if @presenter.additional_title.present? %>
+          <ul class="additional-titles list-unstyled">
+            <% @presenter.additional_title.each do |title| %>
+              <li><h2><%= title %></h2></li>
+            <% end %>
+          </ul>
+        <% end %>
+      </header>
+
+    </div>
+    <div class="col-sm-8">
+      <%= render 'work_description', presenter: @presenter %>
+      <%= render 'relationships', presenter: @presenter %>
+      <%= render 'metadata', presenter: @presenter %>
+    </div>
+    <div class="col-sm-4">
+      <%= render "show_actions", presenter: @presenter %>
+      <%= t('.last_modified', value: @presenter.date_modified) %>
+      <%= render 'representative_media', presenter: @presenter %>
+      <%= render 'large_rights_statement', presenter: @presenter %>
+      <%= render 'social_media' %>
+      <%= render 'citations', presenter: @presenter %>
+    </div>
   </div>
+
+  <div class="row">
+    <div class="col-sm-12">
+      <%= render 'items', presenter: @presenter %>
+      <%= render 'workflow_actions_widget', presenter: @presenter %>
+      <%#= render 'sharing_with', presenter: @presenter %>
+      <%#= render 'user_activity', presenter: @presenter %>
+    </div>
+  </div>
+  <% @presenter.member_presenters.each do |mp| %>
+    <%= render 'lightbox_preview', presenter: mp %>
+  <% end %>
 </div>
-<% @presenter.member_presenters.each do |mp| %>
-  <%= render 'lightbox_preview', presenter: mp %>
-<% end %>
