--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -14,6 +14,13 @@
   }
 }
 
+.representative-image-viewer-link {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 .representative-image-bar {
   position: absolute;
   display: flex;
@@ -22,6 +29,13 @@
   left: 0;
   right: 0;
   background: transparentize($brand-primary, .3);
+  .btn-group {
+    width: 50%;
+    .btn { width: 100%; }
+    .dropdown-menu {
+      left: 5px;
+    }
+  }
   a, button {
     flex: 1;
     border-radius: 0;
