extract custom image thing

--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -26,7 +26,7 @@
   </div>
 
   <div class="work-show-representative">
-      <%= render 'representative_media', presenter: @presenter %>
+      <%= show_page_representative_media(@presenter) %>
       <div class="rights-and-social">
         <%= render 'large_rights_statement', presenter: @presenter %>
         <%= render 'social_media' %>
