--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -4,24 +4,24 @@
 
 // wrapper to keep image from being too high, clipping rather than
 // distorting.
-.representative-image {
+.show-page-image {
   position: relative;
   width: 100%;
   max-height: 80vw;
   overflow: hidden;
-  .representative-image-image {
+  .show-page-image-image {
     width: 100%;
   }
 }
 
-.representative-image-viewer-link {
+.show-page-image-viewer-link {
   display: block;
   position: absolute;
   width: 100%;
   height: 100%;
 }
 
-.representative-image-bar {
+.show-page-image-bar {
   position: absolute;
   display: flex;
   width: 100%;
